# scholarly

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  package-lock.json  package.json
backend/src/: index.ts
backend/src/__tests__/: config.test.ts
backend/src/config/: index.ts
backend/src/middleware/: errorHandler.ts
backend/src/routes/: graph.ts  papers.ts  scraper.ts
backend/src/services/: minio.ts  neo4j.ts  redis.ts
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: index.ts
frontend/src/components/: GraphView.module.css  GraphView.tsx  Nav.module.css  Nav.tsx  PaperDetail.module.css  PaperDetail.tsx  PapersList.module.css  PapersList.tsx  ScraperDashboard.module.css  ScraperDashboard.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: GraphPage.module.css  GraphPage.tsx  PaperDetailPage.module.css  (+4 more)
services/llm/: .env.example  Dockerfile  package-lock.json  package.json
services/postgres_vector/: init.sql
services/processor/: .env.example  Dockerfile  package-lock.json  package.json  processor.py  pyproject.toml
services/processor/src/: config.ts  graphStore.ts  index.ts  llmClient.ts
services/scraper/: Dockerfile  jest.config.json  package-lock.json  package.json  pyproject.toml  scraper.py  scraper2.py
services/scraper/src/: arxivClient.ts  config.ts  index.ts  storage.ts
services/scraper/src/__tests__/: arxivParser.test.ts
(+5 files in other folders)
