[project]
name = "paper-processor"
version = "0.1.0"
description = "Worker przetwarzający PDFy przez LLM i ładujący dane do Postgres/Neo4j"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pika>=1.3.2",
    "redis>=5.0.3",
    "requests>=2.31.0",
    "psycopg[binary]>=3.1.18",
    "neo4j>=5.18.0",
    "minio>=7.2.5",
    "pymupdf>=1.24.0",
    "python-dotenv>=1.0.1"
]