[project]
name = "arxiv-scraper"
version = "0.1.0"
description = "Scraper pobierający nowe prace z arXiv do systemu rekomendacyjnego"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.11",
    "pika>=1.3.2",
    "redis>=5.0.3",
    "python-dotenv>=1.0.1"
]